--- a/NetworkInformationTools/setup.cfg
+++ b/NetworkInformationTools/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = NetworkInformationTools
-version = 0.1.0
+version = 0.0.1
 author = Marius Göcke
 author_email = marius.goecke@gmail.com
 description = NetworkInformationTools gives some information about the current used network.
@@ -35,4 +35,4 @@ exclude = NetworkInformationToolsTests
 
 [options.entry_points]
 console_scripts =
-    executable1 = NetworkInformationTools.Executables:ShowExternalIPAddress
+    showexternalipaddress = NetworkInformationTools.Executables:ShowExternalIPAddress
